--- a/App18.Material/Styles/Other.xaml
+++ b/App18.Material/Styles/Other.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
+    xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes">
 
     <Style x:Key="MaterialDesign3Button" TargetType="{x:Type ButtonBase}">
         <Setter Property="Background"
@@ -22,22 +22,22 @@
                                 Background="{TemplateBinding Background}"
                                 BorderBrush="{TemplateBinding BorderBrush}"
                                 BorderThickness="{TemplateBinding BorderThickness}"
-                                CornerRadius="{Binding Path=(materialDesign:ButtonAssist.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}" />
+                                CornerRadius="{Binding Path=(md3:ButtonAssist.CornerRadius), RelativeSource={RelativeSource TemplatedParent}}" />
                         <ProgressBar x:Name="ProgressBar"
                                      Width="{Binding RelativeSource={RelativeSource AncestorType=ButtonBase}, Path=ActualWidth}"
                                      Height="{TemplateBinding Height}"
                                      HorizontalAlignment="Left"
                                      VerticalAlignment="Center"
-                                     Background="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.IndicatorBackground)}"
-                                     BorderBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.IndicatorBackground)}"
-                                     Foreground="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.IndicatorForeground)}"
-                                     IsIndeterminate="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.IsIndeterminate)}"
-                                     Maximum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.Maximum)}"
-                                     Minimum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.Minimum)}"
-                                     Opacity="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.Opacity)}"
+                                     Background="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IndicatorBackground)}"
+                                     BorderBrush="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IndicatorBackground)}"
+                                     Foreground="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IndicatorForeground)}"
+                                     IsIndeterminate="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IsIndeterminate)}"
+                                     Maximum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Maximum)}"
+                                     Minimum="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Minimum)}"
+                                     Opacity="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Opacity)}"
                                      Style="{DynamicResource MaterialDesignLinearProgressBar}"
-                                     Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.IsIndicatorVisible), Converter={StaticResource BooleanToVisibilityConverter}}"
-                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(materialDesign:ButtonProgressAssist.Value)}">
+                                     Visibility="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.IsIndicatorVisible), Converter={StaticResource BooleanToVisibilityConverter}}"
+                                     Value="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=(md3:ButtonProgressAssist.Value)}">
                             <ProgressBar.Clip>
                                 <MultiBinding Converter="{StaticResource BorderClipConverter}">
                                     <Binding ElementName="border" Path="ActualWidth" />
@@ -48,23 +48,23 @@
                             </ProgressBar.Clip>
                         </ProgressBar>
 
-                        <materialDesign:Ripple Padding="{TemplateBinding Padding}"
-                                               HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                               VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
-                                               Content="{TemplateBinding Content}"
-                                               ContentStringFormat="{TemplateBinding ContentStringFormat}"
-                                               ContentTemplate="{TemplateBinding ContentTemplate}"
-                                               Focusable="False"
-                                               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
-                            <materialDesign:Ripple.Clip>
+                        <md3:Ripple Padding="{TemplateBinding Padding}"
+                                    HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    Content="{TemplateBinding Content}"
+                                    ContentStringFormat="{TemplateBinding ContentStringFormat}"
+                                    ContentTemplate="{TemplateBinding ContentTemplate}"
+                                    Focusable="False"
+                                    SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
+                            <md3:Ripple.Clip>
                                 <MultiBinding Converter="{StaticResource BorderClipConverter}">
                                     <Binding ElementName="border" Path="ActualWidth" />
                                     <Binding ElementName="border" Path="ActualHeight" />
                                     <Binding ElementName="border" Path="CornerRadius" />
                                     <Binding ElementName="border" Path="BorderThickness" />
                                 </MultiBinding>
-                            </materialDesign:Ripple.Clip>
-                        </materialDesign:Ripple>
+                            </md3:Ripple.Clip>
+                        </md3:Ripple>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
@@ -81,13 +81,13 @@
         <Setter Property="TextBlock.FontSize" Value="14" />
         <Setter Property="TextBlock.FontWeight" Value="Medium" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
-        <Setter Property="materialDesign:ButtonAssist.CornerRadius" Value="2" />
-        <Setter Property="materialDesign:ButtonProgressAssist.IndicatorBackground" Value="Transparent" />
-        <Setter Property="materialDesign:ButtonProgressAssist.IndicatorForeground"
+        <Setter Property="md3:ButtonAssist.CornerRadius" Value="2" />
+        <Setter Property="md3:ButtonProgressAssist.IndicatorBackground" Value="Transparent" />
+        <Setter Property="md3:ButtonProgressAssist.IndicatorForeground"
                 Value="{DynamicResource MaterialDesign.Brush.Primary}" />
-        <Setter Property="materialDesign:ButtonProgressAssist.IsIndicatorVisible" Value="False" />
-        <Setter Property="materialDesign:ButtonProgressAssist.Opacity" Value=".4" />
-        <Setter Property="materialDesign:RippleAssist.Feedback"
+        <Setter Property="md3:ButtonProgressAssist.IsIndicatorVisible" Value="False" />
+        <Setter Property="md3:ButtonProgressAssist.Opacity" Value=".4" />
+        <Setter Property="md3:RippleAssist.Feedback"
                 Value="{DynamicResource MaterialDesign.Brush.Primary}" />
     </Style>
 
