--- a/App18.Material/Views/Demo/PageChild2.xaml
+++ b/App18.Material/Views/Demo/PageChild2.xaml
@@ -3,9 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-             mc:Ignorable="d"
-             d:DesignHeight="600" d:DesignWidth="1000">
+             xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
+             mc:Ignorable="d">
     <Grid>
         <Grid.Resources>
             <ResourceDictionary>
@@ -41,13 +40,13 @@
                             </StackPanel>
 
                             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-                                <materialDesign:PopupBox Padding="2,0,2,0"
-                                                         Style="{StaticResource MaterialDesignToolPopupBox}">
+                                <md3:PopupBox Padding="2,0,2,0"
+                                              Style="{StaticResource MaterialDesignToolPopupBox}">
                                     <StackPanel>
                                         <Button Content="More" />
                                         <Button Content="Options" />
                                     </StackPanel>
-                                </materialDesign:PopupBox>
+                                </md3:PopupBox>
                             </StackPanel>
                         </DockPanel>
 
