--- a/App18.Material/Views/PageDemo1.xaml
+++ b/App18.Material/Views/PageDemo1.xaml
@@ -8,8 +8,7 @@
              xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
              Background="{DynamicResource MaterialDesign.Brush.Primary.Light}"
-             d:DataContext="{d:DesignInstance viewModels:Demo1ViewModel, IsDesignTimeCreatable=True}"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DataContext="{d:DesignInstance viewModels:Demo1ViewModel, IsDesignTimeCreatable=True}">
     <Grid Margin="{StaticResource ControlPageContentMargin}">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="270" />
