--- a/App01.VLC/App.xaml
+++ b/App01.VLC/App.xaml
@@ -1,39 +1,19 @@
 ﻿<Application x:Class="App01.VLC.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:ui="http://schemas.modernwpf.com/2019"
-             StartupUri="View/MainWindow.xaml">
+             xmlns:md3="http://materialdesigninxaml.net/winfx/xaml/themes"
+             StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ui:ThemeResources>
-                    <ui:ThemeResources.ThemeDictionaries>
-                        <ResourceDictionary x:Key="Light" ui:ThemeDictionary.Key="Light">
-                            <SolidColorBrush x:Key="AppBackgroundBrush" Color="#FFF0F0F0" />
-                            <SolidColorBrush x:Key="AppContentBackgroundBrush"
-                                             Color="{ui:StaticColor SystemAltHighColor}" />
-                            <Color x:Key="AppExpandedPaneBackground">#FFF9F9F9</Color>
-                            <SolidColorBrush x:Key="CustomThemeBrush" Color="Red" />
-                        </ResourceDictionary>
+                <md3:BundledTheme BaseTheme="Inherit" PrimaryColor="Orange" SecondaryColor="Lime" />
+                <ResourceDictionary
+                    Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
 
-                        <ResourceDictionary x:Key="Dark" ui:ThemeDictionary.Key="Dark">
-                            <SolidColorBrush x:Key="AppBackgroundBrush" Color="#FF232323" />
-                            <SolidColorBrush x:Key="AppContentBackgroundBrush"
-                                             Color="{ui:StaticColor SystemAltHighColor}" />
-                            <Color x:Key="AppExpandedPaneBackground">#FF2C2C2C</Color>
-                            <SolidColorBrush x:Key="CustomThemeBrush" Color="Yellow" />
-                        </ResourceDictionary>
-                    </ui:ThemeResources.ThemeDictionaries>
-                </ui:ThemeResources>
-                <ui:XamlControlsResources />
                 <!-- Other merged dictionaries here -->
-                <ResourceDictionary Source="Style/TextBox.xaml" />
             </ResourceDictionary.MergedDictionaries>
 
-            <LinearGradientBrush x:Key="MyGradientBrush" StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Offset="0" Color="#AFFF" />
-                <GradientStop Offset="1" Color="Transparent" />
-            </LinearGradientBrush>
+            <Thickness x:Key="ControlPageContentMargin">24,20,24,20</Thickness>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
