--- a/App01.VLC/Views/MainWindow.xaml
+++ b/App01.VLC/Views/MainWindow.xaml
@@ -18,7 +18,7 @@
                     SnackbarMessageQueue="{Binding ElementName=MainSnackbar, Path=MessageQueue}">
         <Grid x:Name="ViewGrid">
             <ScrollViewer>
-                <StackPanel Visibility="{Binding IsBusy3, Converter={StaticResource True2VisibleConverter}}">
+                <StackPanel Visibility="{Binding ShowPanel, Converter={StaticResource True2VisibleConverter}}">
                     <Grid Margin="0,10,0,10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="Auto" />
